# burg

./: .gitignore  .travis.yml  COPYING  Makefile.am  README.md  annotated.html  auth.uml  auth_2simple_8h_source.html  auth_8h_source.html  autz.uml  classes.html  config_8h_source.html  configure.ac  crypto_8h_source.html  db_8h_source.html  dir_2aa1ed55b2f767b8fc49d2bc3badee3b.html  dir_610a20d8d9f991d1161f0daadd6a17f8.html  dir_6645d7331e18bd0ab35dcc06ef8626da.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_837db66dad5731ff2574199667e4f72a.html  dir_8f99e2a8b46a578ca08cc239da719b2c.html  dir_d44c64559bbebec7f509842c48db8b23.html  dox  dox.sh  example_8cpp-example.html  examples.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  hierarchy.html  index.html  libconfig_8h_source.html  main.dox  pam_8h_source.html  plain_8h_source.html  sha.sh  simple__auth_8h_source.html  simple__db_8h_source.html  (+80 more)
examples/: Makefile.am  example.cpp
include/: Makefile.am  remote.h
include/burg/: auth.h  db.h  filters.h  pam_db.h  simple_auth.h  simple_db.h
include/burg/auth/: simple.h
include/burg/db/: libconfig.h  pam.h
include/burg/filters/: crypto.h  plain.h
include/burg/store/: simple.h
lib/gmock/: configure
lib/gmock/autom4te.cache/: output.0
lib/gmock/gtest/: aclocal.m4
lib/gmock/gtest/autom4te.cache/: traces.1
m4/: ax_boost_thread.m4
search/: all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_68.js  all_6c.js  all_70.js  all_72.js  all_73.js  classes_61.js  classes_63.js  classes_66.js  classes_70.js  classes_72.js  classes_73.js  classes_74.js  classes_75.js  enums_61.js  enumvalues_61.js  functions_61.js  functions_63.js  functions_64.js  functions_67.js  functions_69.js  functions_6c.js  functions_72.js  functions_73.js  pages_65.js  search.js
src/: Makefile.am  auth.h  db.cfg  db.h  libconfig.cpp  pam.cpp  pam_db.cpp  server.cpp  simple.cpp  simple.h  simple_auth.cpp  simple_auth.h  simple_db.cpp  simple_db.h  simple_store.cpp  util.cpp  util.h
tests/: Makefile.am  burg.cpp  crypto.cpp  db.cfg  libconfig.cpp  mock.h  pam.cpp  test_runner.cpp
tests/lib/gmock/: aclocal.m4
tests/lib/gmock/autom4te.cache/: output.1  requests  traces.0  traces.1
tests/lib/gmock/gtest/: configure
tests/lib/gmock/gtest/autom4te.cache/: output.1  requests  traces.0  traces.2
